--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <model-viewer 
-      src="cell.glb"
+      src="root structure.glb"
       camera-controls
       auto-rotate
       ar
