--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <title>Root structure</title>
+    <title>Root Structure 3D</title>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
     <style>
       body { margin: 0; background: #f9f9f9; }
@@ -14,13 +14,13 @@
   </head>
   <body>
     <model-viewer 
-      src="root structure.glb"
+      src="root_structure.glb"
       camera-controls
       auto-rotate
       ar
       ar-modes="webxr scene-viewer quick-look"
       environment-image="neutral"
-      alt="3D модель клетки">
+      alt="3D модель корневой структуры">
     </model-viewer>
   </body>
 </html>
